# magic-filter

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  build.py  codecov.yaml  mypy.ini  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  test.yaml
magic_filter/: __init__.py  attribute.py  exceptions.py  magic.py  util.py
magic_filter/operations/: __init__.py  all.py  any.py  attr.py  base.py  bases.py  call.py  cast.py  combination.py  comparator.py  contains.py  equals.py  extract.py  func.py  function.py  getattr.py  getitem.py  in_.py  not_none.py  regexp.py  selector.py  simple.py
scripts/: repair-wheels.sh
tests/: test_attrdict.py  test_iterable.py  test_len.py  test_magic.py  test_magic_filter.py
