[tool.poetry]
name = "magic-filter"
version = "1.0.8"
description = "This package provides magic filter based on dynamic attribute getter"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aiogram/magic-filter/"
authors = ["Alex Root Junior <pypi@aiogram.dev>"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Topic :: Utilities",
	"Typing :: Typed",
]
keywords = [
	"magic",
	"filter",
	"validation"
]
include = [
	"magic_filter/py.typed"
]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pytest = "^7.0.1"
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
