[tool.poetry]
name = "magic-filter"
version = "1.0.9"
description = "This package provides magic filter based on dynamic attribute getter"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aiogram/magic-filter/"
authors = ["Alex Root Junior <pypi@aiogram.dev>"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Topic :: Utilities",
	"Typing :: Typed",
]
keywords = [
	"magic",
	"filter",
	"validation"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
mypy = "^0.971"
black = "^22.8.0"
isort = "^5.10.1"
types-setuptools = "^65.3.0"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
