[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magic-filter"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
    "magic",
    "filter",
    "validation"
]
authors = [
    { name = "Alex Root Junior", email = "pypi@aiogram.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit~=2.20.0",
    "pytest~=7.1.3",
    "pytest-cov~=3.0.0",
    "pytest-html~=3.1.1",
    "flake8~=5.0.4",
    "mypy~=0.971",
    "black~=22.8.0",
    "isort~=5.10.1",
    "types-setuptools~=65.3.0",
]

[project.urls]
Documentation = "https://docs.aiogram.dev/en/dev-3.x/dispatcher/filters/magic_filters.html"
Issues = "https://github.com/aiogram/magic-filter/issues"
Source = "https://github.com/aiogram/magic-filter"

[tool.hatch.version]
path = "magic_filter/__init__.py"

[tool.hatch.envs.default]
features = [
    "dev"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 99
known_first_party = [
    "magic_filter"
]
